# aisuite

./: .env.sample  README.md  pyproject.toml  setup.py
aisuite/: client.py  provider.py
aisuite/framework/: chat_provider.py  rerank_provider.py  rerank_util.py  tool_utils.py
aisuite/providers/: anthropic_provider.py  aws_provider.py  azure_provider.py  fireworks_provider.py  google_provider_shared.py  googlecloud_provider.py  googlegenai_provider.py  googlevertex_provider.py  groq_provider.py  huggingface_provider.py  langchain_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  together_provider.py
src/aisuite/: client.py  provider.py
src/aisuite/framework/: __init__.py  chat_completion_response.py  choice.py  embedding_provider.py  provider_interface.py  rerank_provider.py  rerank_util.py
src/aisuite/providers/: anthropic_provider.py  aws_provider.py  azure_provider.py  fireworks_provider.py  google_provider_shared.py  googlegenai_provider.py  langchain_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py
test/providers/: test_aws_provider.py  test_azure_provider.py  test_fireworks_provider.py  test_google_provider.py  test_groq_provider.py  test_langchain_provider.py  test_mistral_provider.py
tests/client/: test_client.py
tests/providers/: test_google_provider.py  test_ollama_provider.py
