[project]
name = "aisuite"
version = "0.1.6"
description = "Uniform access layer for LLMs"
authors = [
    {name = "Andrew Ng"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.1"]
aws = ["boto3>=1.34.144"]
azure = []
google = ["vertexai>=1.63.0"]
google-genai = ["google-cloud-discoveryengine>=0.13.6", "google-generativeai==0.8.3"]
groq = ["groq>=0.9.0"]
huggingface = []
mistral = ["mistralai>=1.0.3"]
ollama = []
langchain = ["langchain==0.3.24", "langchain-mcp-adapters==0.0.9", "langgraph==0.3.34"]
openai = ["openai>=1.35.8"]
rerankers = ["rerankers>=0.8.0"]
all = ["anthropic>=0.30.1", "boto3>=1.34.144", "vertexai>=1.63.0", "groq>=0.9.0", "mistralai>=1.0.3", "openai>=1.35.8", "langchain==0.3.24", "langchain-mcp-adapters==0.0.9", "langgraph==0.3.34", "google-cloud-discoveryengine>=0.13.6", "google-generativeai==0.8.3", "rerankers>=0.8.0"]
dev = [
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "python-dotenv>=1.0.0",
    "notebook>=7.2.1",
    "ollama>=0.2.1",
    "fireworks-ai>=0.14.0",
    "chromadb>=0.5.4",
    "sentence-transformers>=3.0.1",
    "datasets>=2.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["aisuite"]
package-dir = {"" = "src"}
